tests/parser/errors/struct_decl.rv
struct {}

struct Foo
    var a = 1

struct Foo {
    fn abc() {}

    var a = 1
}

struct Foo {
    fn a() {}

